--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -15,6 +15,7 @@ $color-pink           : #F43F5E;
 $color-green          : #14B8A5;
 $color-indigo          : #6467F2;
 $color-purple          : #A855F7;
+$color-sky          : #DCEBFE;
 
 
             
