--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -50,10 +50,11 @@ h2,
   line-height: 1.13;
 
   @include tablet {
-    font-size: 40px;
+    font-size: 30px;
   }
   @include mobile {
-    font-size: 32px;
+    font-size: 25px;
+    line-height: 1.2;
   }
 }
 
