--- a/views/blocks/block-cover-image.twig
+++ b/views/blocks/block-cover-image.twig
@@ -6,7 +6,7 @@
 #}
 
 <section class="{{ block.classes }} {{ display }}" id="{{ block.id }}">
-  <div class="block-container l-container --h-padding">
+  <div class="block-container l-container">
     
     <div class="block-cover-image__inner">
         <div class="block-cover-image__content editor">
