--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -53,6 +53,7 @@ $map-colors: (
   color-indigo : $color-indigo,
   color-purple : $color-purple,
   color-black-medium : $color-black-medium,
+  color-white : $color-white,
 
 
   // color-medium-grey    : $color-medium-grey,
