--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -54,6 +54,8 @@ $map-colors: (
   color-purple : $color-purple,
   color-black-medium : $color-black-medium,
   color-white : $color-white,
+  color-light-grey : $color-light-grey,
+  color-grey-medium : $color-grey-medium,
 
 
   // color-medium-grey    : $color-medium-grey,
