--- a/src/scss/components/blocks/_block-cta.scss
+++ b/src/scss/components/blocks/_block-cta.scss
@@ -21,7 +21,7 @@
   
   // --modifier
   &.--bg-grey {
-    background-color: $color-light-grey;
+    background-color: $color-primary-050;
   }
 
   &.--bg-primary {
