--- a/src/scss/components/blocks/_block-anchors.scss
+++ b/src/scss/components/blocks/_block-anchors.scss
@@ -39,8 +39,8 @@ margin-top: 200px;
   
 
   .tablist__btn {
-    --color-border: var(--color-grey-medium);
-    --color-bg-hover: var(--color-light-grey);
+    --color-border: var(--color-accent-pale);
+    --color-bg-hover: var(--color-accent-light);
     display: inline-flex;
     flex-direction: column;
     align-items: center;
@@ -119,7 +119,7 @@ margin-top: 200px;
     align-items: center;
     padding-top: 90px;
     padding-bottom: 90px;
-    background-color: $color-light-grey;
+    background-color: $color-primary-050;
 
     & + .panel {
       margin-top: 90px;
