--- a/src/scss/components/blocks/_block-cta-illus.scss
+++ b/src/scss/components/blocks/_block-cta-illus.scss
@@ -8,7 +8,7 @@
 .block-cta-illus {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: $color-light-grey;
+  background-color: $color-primary-050;
   
   @include tablet-small {
     padding-top: 60px;
