--- a/src/scss/components/blocks/_block-testimonial.scss
+++ b/src/scss/components/blocks/_block-testimonial.scss
@@ -54,7 +54,7 @@
   min-height: 100%;
   width: 400px;
   padding: 30px 20px;
-  background-color: $color-light-grey;
+  background-color: $color-primary-050;
   border-radius: $border-radius;
 
   @include mobile {
@@ -110,7 +110,7 @@
 }
 
 .slide-testimonial__date {
-  color: $color-grey-dark;
+  color: $color-grey-600;
 
   * + & {
     margin-top: -4px;    
