Block CTA cards

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -10,8 +10,9 @@
 
 // Brand colors
 $color-primary    : #3B82F6;
-$color-primary-100: #DCEBFE;
 $color-primary-050: #F0F6FF;
+$color-primary-100: #DCEBFE;
+$color-primary-200: #BEDBFE;
 $color-navy       : #1E3FAE;  // blue 800
 $color-green      : #14B8A5;
 $color-green-100  : #CBFBF0;
