--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -72,15 +72,6 @@ h3,
   }
 }
 
-h4,
-.h4 {
-  margin-bottom: 0;
-  font-size: 16px;
-  line-height: 1.4;
-  font-weight: 700;
-  text-transform: uppercase;
-}
-
 
 //  Other
 // -----------------------------------------------
@@ -149,7 +140,7 @@ img.--border-radius {
 
 
 
-
+/* 
 
 .editor-text {
   h2,
@@ -191,4 +182,4 @@ img.--border-radius {
   }
 
   // @include bd();
-}
+} */
