--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -57,6 +57,6 @@ body[data-color-theme="purple"] {
   }
 }
 
-.block:not(.bloc-cover-text):first-child {
+.block:not(.block-cover-image):first-child {
   margin-top: 80px;
 }
