--- a/src/scss/base/_utilities.scss
+++ b/src/scss/base/_utilities.scss
@@ -79,6 +79,10 @@
   @include image-cover();
 }
 
+.u-border-radius {
+  border-radius: $border-radius;
+}
+
 
 //  Hide
 // -----------------------------------------------
