--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,8 +9,7 @@
 @import 'vendors/bootstrap/utilities/bootstrap-display';    // chargé aprés variables, requiert $grid-breakpoints 
 @import 'vendors/flickity/flickity';
 @import 'vendors/flickity/flickity-fade';
-@import "vendors/splitting/splitting";
-@import 'vendors/aos/aos';
+// @import 'vendors/aos/aos';
 
 @import 'base/reboot';
 @import 'base/base';
@@ -21,18 +20,14 @@
 @import 'layout/*'; 
     // TOADD _global partial with .page-wrapper, .main, (instead of .base)
 
-@import 'vendors-custom/flickity-theme-custom';
-@import 'vendors-custom/aos-custom';
+// @import 'vendors-custom/flickity-theme-custom';
+// @import 'vendors-custom/aos-custom';
 
 @import 'components/base/*';
 @import 'components/common/*';
 @import 'components/blocks/*';
+@import 'components/panel';
 @import 'components/form-newsletter';
-@import 'components/pagination';
-@import 'components/menu-filters';
-@import 'components/card-post';
-@import 'components/grid-posts';
-@import 'components/slider-images';
 
 @import 'pages/*';
 
