--- a/src/scss/components/blocks/_block-anchors.scss
+++ b/src/scss/components/blocks/_block-anchors.scss
@@ -108,4 +108,12 @@
       margin-top: 20px;
     }
   }
+
+  .panel + .panel {
+    margin-top: 90px;
+
+    @include tablet-small {
+      margin-top: 40px;
+    }
+  }
 }
