--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -136,12 +136,16 @@ p + p {
 
 
 
-figure.ratio-4-3 {
+.ratio-4-3 {
   @include aspect-ratio(564, 415);
 }
 
-figure.ratio-16-9 {
+.ratio-16-9 {
   @include aspect-ratio(504, 316);
+}
+
+.ratio-1-1 {
+  @include aspect-ratio(1, 1);
 }
 
 
