--- a/src/scss/components/base/_buttons.scss
+++ b/src/scss/components/base/_buttons.scss
@@ -10,178 +10,203 @@
 // -----------------------------------------------
 
 @mixin btn-outline {
-  --color-text : var(--color-primary);
-  background-color: transparent;
-  border: 2px solid $color-primary;
+	--color-text: var(--color-primary);
+	background-color: transparent;
+	border: 2px solid $color-primary;
 
-  &:hover {
-    background-color: $color-navy;
-    color: $color-white;
-    border-color: $color-navy;
-  }
+	&:hover {
+		background-color: $color-navy;
+		color: $color-white;
+		border-color: $color-navy;
+	}
 }
 
 
 .btn {
-  --color-text : white;
-  --color-bg : var(--color-primary);
-  @include inline-flex-center();
-  padding: 0.55em 1.33em;
-  font-size: 18px;
-  font-weight: 700;
-  text-align: center;
-  color: var(--color-text);
-  background-color: var(--color-bg);
-  border-radius: $border-radius-small;
-  transition: color $trans-color, background-color $trans-color, border-color $trans-color;
+	--color-text: white;
+	--color-bg: var(--color-primary);
+	@include inline-flex-center();
+	padding: 0.55em 1.33em;
+	font-size: 18px;
+	font-weight: 700;
+	text-align: center;
+	color: var(--color-text);
+	background-color: var(--color-bg);
+	border-radius: $border-radius-small;
+	transition: color $trans-color, background-color $trans-color, border-color $trans-color;
 
-  @include mobile {
-    font-size: 16px;
-  }
+	@include mobile {
+		font-size: 16px;
+	}
 
-  &:hover {
-    background-color: $color-navy;
-  }
+	&:hover {
+		background-color: $color-navy;
+	}
 
-  // -modifiers
-  &.--small {
-    font-size: 16px;
-    padding: 8px 16px;
-  }
+	// --modifiers
+	&.--small {
+		font-size: 16px;
+		padding: 8px 16px;
+	}
 
-  &.--navy {
-    --color-bg : var(--color-navy);
+	&.--navy {
+		--color-bg: var(--color-navy);
 
-    &:hover {
-      background-color: $color-primary;
-    }
-  }
+		&:hover {
+			background-color: $color-primary;
+		}
+	}
 
-  &.--outline {
-    @include btn-outline();
-  }
+	&.--outline {
+		@include btn-outline();
+	}
 
-  &.--outline-white {
-    --color-text : var(--color-white);
-    background-color: transparent;
-    border: 2px solid $color-white;
+	&.--outline-white {
+		--color-text: var(--color-white);
+		background-color: transparent;
+		border: 2px solid $color-white;
 
-    &:hover {
-      background-color: $color-white;
-      color: $color-primary;
-    }
-  }
-
-
-  &.--link {
-    --color-text : var(--color-black-medium);
-    padding: 8px 16px;
-    font-size: 16px;
-    font-weight: 400;
-    background-color: initial;
-  
-    &:hover {
-      color: $color-navy;
-      background-color: initial;
-    }
-  }
-
-  &.--stretch-mobile {
-    @include mobile {
-      width: 100%;
-    }
-  }
-
-  // Changement d'aspect en mobile
-  &.--outline-mobile {
-    @include mobile {
-      @include btn-outline();
-    }
-  }
+		&:hover {
+			background-color: $color-white;
+			color: $color-primary;
+		}
+	}
 
 
-  
+	&.--link {
+		--color-text: var(--color-black-medium);
+		padding: 8px 16px;
+		font-size: 16px;
+		font-weight: 400;
+		background-color: initial;
+
+		&:hover {
+			color: $color-navy;
+			background-color: initial;
+		}
+	}
+
+	&.--stretch-mobile {
+		@include mobile {
+			width: 100%;
+		}
+	}
+
+	// Changement d'aspect en mobile
+	&.--outline-mobile {
+		@include mobile {
+			@include btn-outline();
+		}
+	}
+
+
+	&.--sticky-demo {
+		position: sticky;
+		bottom: 0;
+		border-radius: initial;
+		width: 100%;
+		opacity: 0;
+		visibility: hidden;
+		transform: translateY(50%);
+		box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.15);
+		transition: opacity $trans-duration, visibility $trans-duration, transform $trans-duration;
+
+		&.is-show {
+			opacity: 1;
+			visibility: visible;
+			transform: initial;
+		}
+
+		@include min-tablet {
+			display: none;
+		}
+	}
 
 
 
-  &.-white {
-    --color-bg : white;
-    --color-text : var(--color-navy);
-
-    &:hover {
-      color: var(--color-bg);
-      background-color: var(--color-text);
-    }
-  }
-
-  &.-ghost {
-    color: var(--color-bg);
-    background-color: rgba($color-navy, 0);
-    border: 1px solid var(--color-bg);
-
-    &:hover,
-    &:focus {
-      color: var(--color-text);
-      background-color: $color-navy;
-    }
-  }
-
-  &.-ghost.-white {
-    color: var(--color-bg);
-    background-color: rgba($color-navy, 0);
-    border: 1px solid var(--color-bg);
-
-    &:hover,
-    &:focus {
-      border-color: $color-navy;
-      background-color: $color-navy;
-    }
-  }
 
 
-  &.-small {
-    // padding: 0.6em 1.6em;
-    padding: 0.56em 1em;
-    font-size: 16px;
-  }
 
-  &.-thick {
-    border-width: 2px !important;
-  }
+	&.-white {
+		--color-bg: white;
+		--color-text: var(--color-navy);
 
-  &.-icon {
-    .icon {
-      flex-shrink: 0;
-      font-size: 1em;
-      margin-right: 1rem;
-      fill: var(--color-text);
-    }
-  }
+		&:hover {
+			color: var(--color-bg);
+			background-color: var(--color-text);
+		}
+	}
 
-  &.-icon.-ghost {
-    .icon {
-      fill: var(--color-bg);
-    }
-  }
+	&.-ghost {
+		color: var(--color-bg);
+		background-color: rgba($color-navy, 0);
+		border: 1px solid var(--color-bg);
 
-  &.-contact {
-    .icon {
-      margin-right: unset;
-      display: none;
-    }
-    @include media-breakpoint-down(sm) {
-      .icon {
-        display: block;
-      }
-      span {
-        display: none;
-      }
-    }
-  }
+		&:hover,
+		&:focus {
+			color: var(--color-text);
+			background-color: $color-navy;
+		}
+	}
+
+	&.-ghost.-white {
+		color: var(--color-bg);
+		background-color: rgba($color-navy, 0);
+		border: 1px solid var(--color-bg);
+
+		&:hover,
+		&:focus {
+			border-color: $color-navy;
+			background-color: $color-navy;
+		}
+	}
+
+
+	&.-small {
+		// padding: 0.6em 1.6em;
+		padding: 0.56em 1em;
+		font-size: 16px;
+	}
+
+	&.-thick {
+		border-width: 2px !important;
+	}
+
+	&.-icon {
+		.icon {
+			flex-shrink: 0;
+			font-size: 1em;
+			margin-right: 1rem;
+			fill: var(--color-text);
+		}
+	}
+
+	&.-icon.-ghost {
+		.icon {
+			fill: var(--color-bg);
+		}
+	}
+
+	&.-contact {
+		.icon {
+			margin-right: unset;
+			display: none;
+		}
+
+		@include media-breakpoint-down(sm) {
+			.icon {
+				display: block;
+			}
+
+			span {
+				display: none;
+			}
+		}
+	}
 }
 
 .green-button {
-  background-color: green;
+	background-color: green;
 }
 
 
@@ -190,341 +215,353 @@
 
 
 .btn-all-posts {
-  --color-text: var(--color-primary);
-  position: relative;
-  display: inline-flex;
-  padding: 8px 0;
-  font-size: 16px;
-  font-weight: 700;
-  letter-spacing: 0.1em;
-  text-align: center;
-  text-transform: uppercase;
-  color: var(--color-text);
+	--color-text: var(--color-primary);
+	position: relative;
+	display: inline-flex;
+	padding: 8px 0;
+	font-size: 16px;
+	font-weight: 700;
+	letter-spacing: 0.1em;
+	text-align: center;
+	text-transform: uppercase;
+	color: var(--color-text);
 
-  &:hover,
-  &:focus {
-    &:after {
-      transform-origin: top left;
-      transform: initial;
-    }
-  }
+	&:hover,
+	&:focus {
+		&:after {
+			transform-origin: top left;
+			transform: initial;
+		}
+	}
 
-  &:after {
-    @include pseudo-block(100%, 1px, $color-primary);
-    bottom: 2px;
-    left: 0;
-    transform-origin: top right;
-    transform: scaleX(0);
-    transition: transform 0.25s easeInOutQuad;
-  }
+	&:after {
+		@include pseudo-block(100%, 1px, $color-primary);
+		bottom: 2px;
+		left: 0;
+		transform-origin: top right;
+		transform: scaleX(0);
+		transition: transform 0.25s easeInOutQuad;
+	}
 }
 
 
 .btn-pagination {
-  --color-text: var(--color-primary);
-  position: relative;
-  display: inline-flex;
-  align-items: center;
-  color: var(--color-text);
+	--color-text: var(--color-primary);
+	position: relative;
+	display: inline-flex;
+	align-items: center;
+	color: var(--color-text);
 
-  &:hover,
-  &:focus {
-    .btn-pagination__label:after {
-      transform-origin: top left;
-      transform: initial;
-    }
+	&:hover,
+	&:focus {
+		.btn-pagination__label:after {
+			transform-origin: top left;
+			transform: initial;
+		}
 
-    .btn-pagination__arrow {
-      border-color: transparent;
+		.btn-pagination__arrow {
+			border-color: transparent;
 
-      &:before,
-      &:after {
-        opacity: 1;
-      }
+			&:before,
+			&:after {
+				opacity: 1;
+			}
 
-      .icon {
-        fill: white;
-        transform: translateX(2px);
-      }
-    }
-  }
+			.icon {
+				fill: white;
+				transform: translateX(2px);
+			}
+		}
+	}
 
-  .btn-pagination__label {
-    position: relative;
-    font-size: 16px;
-    font-weight: 700;
-    letter-spacing: 0.1em;
-    text-transform: uppercase;
+	.btn-pagination__label {
+		position: relative;
+		font-size: 16px;
+		font-weight: 700;
+		letter-spacing: 0.1em;
+		text-transform: uppercase;
 
-    &:after {
-      @include pseudo-block(100%, 1px, $color-primary);
-      bottom: -6px;
-      left: 0;
-      transform-origin: top right;
-      transform: scaleX(0);
-      transition: transform 0.25s easeInOutQuad;
-    }
-  }
+		&:after {
+			@include pseudo-block(100%, 1px, $color-primary);
+			bottom: -6px;
+			left: 0;
+			transform-origin: top right;
+			transform: scaleX(0);
+			transition: transform 0.25s easeInOutQuad;
+		}
+	}
 
-  .btn-pagination__arrow {
-    position: relative;
-    flex-shrink: 0;
-    @include flex-center();
-    width: 64px;
-    height: 64px;
-    border-radius: 50%;
-    border: 1px solid $color-primary-soft;
-    color: currentColor;
-    transition: border-color 0.25s linear;
+	.btn-pagination__arrow {
+		position: relative;
+		flex-shrink: 0;
+		@include flex-center();
+		width: 64px;
+		height: 64px;
+		border-radius: 50%;
+		border: 1px solid $color-primary-soft;
+		color: currentColor;
+		transition: border-color 0.25s linear;
 
-    &:before,
-    &:after {
-      @include pseudo-block(inherit, inherit);
-      top: -1px;
-      left: -1px;
-      border-radius: inherit;
-      opacity: 0;
-      transition: opacity 0.25s linear;
-    }
-    &:before {
-      box-shadow: var(--primary-shadow);
-    }
+		&:before,
+		&:after {
+			@include pseudo-block(inherit, inherit);
+			top: -1px;
+			left: -1px;
+			border-radius: inherit;
+			opacity: 0;
+			transition: opacity 0.25s linear;
+		}
 
-    &:after {
-      background-image: var(--primary-gradient);
-      will-change: opacity;
-    }
+		&:before {
+			box-shadow: var(--primary-shadow);
+		}
 
-    .icon {
-      position: relative;
-      z-index: 1;
-      font-size: 20px;
-      fill: currentColor;
-      transition: fill 0.25s linear, transform 0.25s easeInOutQuad;
-    }
-  }
+		&:after {
+			background-image: var(--primary-gradient);
+			will-change: opacity;
+		}
 
-  &.--prev {
-    .btn-pagination__label {
-      margin-left: 20px;
-    }
-    .btn-pagination__arrow {
-      transform: scaleX(-1);
-    }
-  }
+		.icon {
+			position: relative;
+			z-index: 1;
+			font-size: 20px;
+			fill: currentColor;
+			transition: fill 0.25s linear, transform 0.25s easeInOutQuad;
+		}
+	}
 
-  &.--next {
-    .btn-pagination__label {
-      margin-right: 20px;
-    }
-  }
+	&.--prev {
+		.btn-pagination__label {
+			margin-left: 20px;
+		}
 
-  @include media-breakpoint-down(md) {
-    .btn-pagination__label {
-      display: none;
-    }
-  }
+		.btn-pagination__arrow {
+			transform: scaleX(-1);
+		}
+	}
+
+	&.--next {
+		.btn-pagination__label {
+			margin-right: 20px;
+		}
+	}
+
+	@include media-breakpoint-down(md) {
+		.btn-pagination__label {
+			display: none;
+		}
+	}
 }
 
 
 
 
 .btn-circle {
-  --color-text: var(--color-primary);
-  position: relative;
-  z-index: 1;
-  display: inline-flex;
-  align-items: center;
-  height: 160px;
-  width: 160px;
-  padding: 26px;
-  text-align: left;
-  border-radius: 100%;
-  border: 1px solid $color-primary-medium;
-  transition: border-color 0.25s;
+	--color-text: var(--color-primary);
+	position: relative;
+	z-index: 1;
+	display: inline-flex;
+	align-items: center;
+	height: 160px;
+	width: 160px;
+	padding: 26px;
+	text-align: left;
+	border-radius: 100%;
+	border: 1px solid $color-primary-medium;
+	transition: border-color 0.25s;
 
-  &:not([disabled]):hover,
-  &:not([disabled]):focus,
-  &:not([disabled]).is-loading {
-    border-color: transparent;
-    
-    &:before,
-    &:after {
-      opacity: 1;
-    }
+	&:not([disabled]):hover,
+	&:not([disabled]):focus,
+	&:not([disabled]).is-loading {
+		border-color: transparent;
 
-    .btn-circle__label {
-      color: white;
-      transform: translateX(6px);
-      transition: transform 0.25s 0.1s easeOutQuad, color 0.25s;
-    }
-  }
+		&:before,
+		&:after {
+			opacity: 1;
+		}
 
-  &:before,
-  &:after {
-    @include pseudo-block(inherit, inherit);
-    top: 0;
-    left: 0;
-    border-radius: inherit;
-    opacity: 0;
-    transition: opacity 0.25s linear, transform 0.2s easeOutQuad;
-  }
-  &:before {
-    box-shadow: var(--primary-shadow);
-  }
+		.btn-circle__label {
+			color: white;
+			transform: translateX(6px);
+			transition: transform 0.25s 0.1s easeOutQuad, color 0.25s;
+		}
+	}
 
-  &:after {
-    background-image: var(--primary-gradient);
-    will-change: opacity;
-  }
+	&:before,
+	&:after {
+		@include pseudo-block(inherit, inherit);
+		top: 0;
+		left: 0;
+		border-radius: inherit;
+		opacity: 0;
+		transition: opacity 0.25s linear, transform 0.2s easeOutQuad;
+	}
 
-  .btn-circle__label {
-    position: relative;
-    z-index: 1;
-    font-family: $font-body;
-    color: var(--color-text);
-    transition: transform 0.25s easeOutQuad, color 0.25s;
-  }
+	&:before {
+		box-shadow: var(--primary-shadow);
+	}
+
+	&:after {
+		background-image: var(--primary-gradient);
+		will-change: opacity;
+	}
+
+	.btn-circle__label {
+		position: relative;
+		z-index: 1;
+		font-family: $font-body;
+		color: var(--color-text);
+		transition: transform 0.25s easeOutQuad, color 0.25s;
+	}
 }
- 
+
 
 
 // btn with loader SVG inside (AJAX load-more, form submit...). When .is-loading class is applied, SVG loader is showed.
 .btn-circle.--loader {
 
-  &[disabled] {
-    display: none;
-    // visibility: hidden;
-  }
-  
-  &.is-loading {
-    pointer-events: none;
-    transition: border-color 0.25s;
+	&[disabled] {
+		display: none;
+		// visibility: hidden;
+	}
 
-    &:before,
-    &:after {
-      transform: scale(0.5);
-    }
+	&.is-loading {
+		pointer-events: none;
+		transition: border-color 0.25s;
 
-    .btn-circle__label {
-      visibility: hidden;
-    }
+		&:before,
+		&:after {
+			transform: scale(0.5);
+		}
 
-    .loader-animation {
-      display: block;
-      animation: loaderAnimation 0.6s ease-in-out infinite;
-    }
-  }
+		.btn-circle__label {
+			visibility: hidden;
+		}
 
-  .loader-animation-wrapper {
-    @include absolute-center();
-    z-index: 2;
-  }
-  .loader-animation {
-    width: 36px;
-    height: 36px;
-    fill: white;
-    margin-left: 2px;
-    display: none;
-  }
+		.loader-animation {
+			display: block;
+			animation: loaderAnimation 0.6s ease-in-out infinite;
+		}
+	}
 
-  ////
-  // &:hover {
+	.loader-animation-wrapper {
+		@include absolute-center();
+		z-index: 2;
+	}
 
-  //   &:before,
-  //   &:after {
-  //     transform: scale(0.5);
-  //   }
-  //   .loader-animation {
-  //     animation: loaderAnimation 0.6s ease-in-out infinite;
-  //   }
-  // }
+	.loader-animation {
+		width: 36px;
+		height: 36px;
+		fill: white;
+		margin-left: 2px;
+		display: none;
+	}
 
-  // .btn-circle__label {
-  //   display: none;
-  // }
+	////
+	// &:hover {
+
+	//   &:before,
+	//   &:after {
+	//     transform: scale(0.5);
+	//   }
+	//   .loader-animation {
+	//     animation: loaderAnimation 0.6s ease-in-out infinite;
+	//   }
+	// }
+
+	// .btn-circle__label {
+	//   display: none;
+	// }
 }
 
 @keyframes loaderAnimation {
-  0%   { transform: rotate(0deg); }
-  50%   { transform: rotate(90deg); }
-  100%   { transform: rotate(90deg); }
+	0% {
+		transform: rotate(0deg);
+	}
+
+	50% {
+		transform: rotate(90deg);
+	}
+
+	100% {
+		transform: rotate(90deg);
+	}
 }
 
 
 
 .btn-contact {
-  @include inline-flex-center();
-  position: relative;
-  width: 60px;
-  height: 60px;
-  border: 1px solid $color-primary;
-  border-radius: 100%;
-  color: $color-primary;
-  transition: border-color 0.35s, color 0.35s;
-  
-  &:before {
-    @include pseudo-block(100%, 100%);
-    top: 0;
-    left: 0;
-    border-radius: 100%;
-    background-image: var(--primary-gradient);
-    opacity: 0;
-    transition: all 0.35s;
-  }
+	@include inline-flex-center();
+	position: relative;
+	width: 60px;
+	height: 60px;
+	border: 1px solid $color-primary;
+	border-radius: 100%;
+	color: $color-primary;
+	transition: border-color 0.35s, color 0.35s;
 
-  &:hover,
-  &:focus,
-  body.page-template-template-contact & {
-    color: white;
-    border-color: transparent;
-     
-    &:before {
-      opacity: 1;
-      transform: scale(1.15);
-    }
-  }
+	&:before {
+		@include pseudo-block(100%, 100%);
+		top: 0;
+		left: 0;
+		border-radius: 100%;
+		background-image: var(--primary-gradient);
+		opacity: 0;
+		transition: all 0.35s;
+	}
 
-  .icon {
-    position: relative;
-    font-size: 20px;
-    fill: currentColor;
-  }
+	&:hover,
+	&:focus,
+	body.page-template-template-contact & {
+		color: white;
+		border-color: transparent;
+
+		&:before {
+			opacity: 1;
+			transform: scale(1.15);
+		}
+	}
+
+	.icon {
+		position: relative;
+		font-size: 20px;
+		fill: currentColor;
+	}
 }
 
 
 
 
-  // nav-primary__link style when on mobile
-  // @include media-breakpoint-down(md) {
-  //   @include inline-flex-center($align:v);
-  //   width: initial;
-  //   height: initial;
-  //   border: initial;
-  //   border-radius: initial;
-  //   padding: 14px 12px;
-  //   font-size: 22px;
-  //   font-weight: 600;
-  //   text-transform: uppercase;
-  //   line-height: 1.2;
-  //   letter-spacing: 0.08em;
-  //   color: $color-medium-grey;
-  //   transition: color $trans-duration;
+// nav-primary__link style when on mobile
+// @include media-breakpoint-down(md) {
+//   @include inline-flex-center($align:v);
+//   width: initial;
+//   height: initial;
+//   border: initial;
+//   border-radius: initial;
+//   padding: 14px 12px;
+//   font-size: 22px;
+//   font-weight: 600;
+//   text-transform: uppercase;
+//   line-height: 1.2;
+//   letter-spacing: 0.08em;
+//   color: $color-medium-grey;
+//   transition: color $trans-duration;
 
-  //   &:hover,
-  //   &:focus {
-  //     color: $color-primary;
-  //   }
+//   &:hover,
+//   &:focus {
+//     color: $color-primary;
+//   }
 
-  //   .nav-primary__item.is-active > & {
-  //     color: $color-primary;
-  //   }
-    
-  //   &:before,
-  //   .icon {
-  //     display: none;
-  //   }
-  //   span {
-  //     display: flex;
-  //   }
-  // }
+//   .nav-primary__item.is-active > & {
+//     color: $color-primary;
+//   }
+
+//   &:before,
+//   .icon {
+//     display: none;
+//   }
+//   span {
+//     display: flex;
+//   }
+// }
